--- a/src/app/products/product/product.component.scss
+++ b/src/app/products/product/product.component.scss
@@ -1,3 +1,21 @@
+section{
+  .btn-back-home{
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #ff8080;
+    padding: 1.7rem 1rem;
+    border-radius: 3rem;
+    transition: 1s;
+  }
+  
+  .btn-back-home:hover{
+    transition: 1s;
+    background-color: #ffaaaa;
+    box-shadow: 0.1rem 0.1rem 0.5rem rgba(0, 0, 0, 0.2);
+  }
+}
+
 .product-form {
   max-width: 600px;
   margin: auto;
@@ -7,7 +25,6 @@
 }
 
 .header-form {
-
   padding: 1rem;
   border-bottom-style: groove;
 
@@ -45,10 +62,6 @@ form {
   padding: 0.5rem;
   border-radius: 0.25rem;
   border: 1px solid #ccc;
-}
-
-.solo-input {
-  width: 95%;
 }
 
 .error-messages {
@@ -96,5 +109,34 @@ form {
   .btn-create:hover {
     background-color: #ebd660;
     transition: 1s;
+  }
+}
+
+input:read-only{
+  background: #8080801a;
+  cursor: not-allowed;
+}
+
+@media (min-width: 768px) {
+  .solo-input {
+    width: 95%;
+  }
+}
+
+@media (max-width: 768px) {
+  form{
+    padding: 2rem 1rem;
+
+    .form-section{
+      grid-template-columns: auto;
+    }
+
+    .btn-group{
+      flex-direction: column;
+
+      button{
+        margin: 0.5rem 0rem;
+      }
+    }
   }
 }
