--- a/src/app/shared/confirm-modal/confirm-modal.component.scss
+++ b/src/app/shared/confirm-modal/confirm-modal.component.scss
@@ -14,8 +14,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
-    padding: 20px;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1001;
 
@@ -64,6 +63,16 @@
 
         .btn-cancel:hover{
             background-color: #d4cdc3;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .modal{
+        width: 88%;
+
+        .modal-body{
+            padding: 1rem;
         }
     }
 }
